# personal_projects

./: .gitmodules  .vimrc  README.md
branches/src/: main.rs
c-assembly/: README.md
c-assembly/HelloSilicon/: README.md
c-assembly/calculator/: CMakeLists.txt  README.md  types.h
c-assembly/calculator/calcser/: CMakeLists.txt  README.md  calc_proto_req.h  calc_proto_resp.h  calc_proto_ser.c  calc_proto_ser.h
c-assembly/calculator/calcsvc/: README.md
c-assembly/network/: .gitignore  README.md  net_header.h
c-assembly/reading-files/: README.md
c-assembly/testing/: allheads.h  gsl_erf  gsl_erf.c
c-assembly/util/: README.md  bigint.c  bigint.h  util.c  util.h
c-assembly/zig/: README.md
docker/: README.md
docker/jupyter-notebook-test/: Dockerfile  docker-compose.yml  requirements.txt
docker/node-express-test/: index.js  package.json
docker/python_test/: README.md  main.py  requirements.txt
dotfiles/: .gitconfig  .vimrc  .zshrc  README.md  keybindings.json  settings.json
fp-ts/: .gitignore  README.md
fp-ts/grouping-algo/: README.md  index.ts  package-lock.json  package.json  ts-config.json
fp-ts/test-project/: main.js
fp-ts/type-exercises/: package-lock.json  package.json
go/bittorrent/: README.md  torrent.go
go/bittorrent-go/: .gitignore  README.md  go.mod  go.sum  main.go  walkthrough.go
go/gopl/: README.md
go/my-little-container/: README.md  contained.c
julia/: README.md
julia/demos/: Project.toml
rust/: .gitignore  README.md
rust/pngme/: Cargo.toml
spring/: README.md
web-dev/: .gitignore  README.md  docker-compose.yml
(+209 files in other folders)
